--- a/TagusPortus/src/app.css
+++ b/TagusPortus/src/app.css
@@ -742,6 +742,7 @@ strong {
     justify-content: center;
     align-items: center;
     height: 100vh;
+    text-align: center;
 }
 
 .not-found-container img {
@@ -749,6 +750,7 @@ strong {
 }
 
 .not-found-container p {
+    text-align: center;
     margin-bottom: 2em;
     width: 90%;
 }
