--- a/TagusPortus/src/app.css
+++ b/TagusPortus/src/app.css
@@ -549,9 +549,22 @@ strong {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 1em;
+    gap: 1.5em;
     max-width: 75%;
 }
+
+.form-section {
+    display: flex;
+    flex-direction: column;
+    gap: 0.3em;
+    justify-content: center;
+    align-items: center;
+}
+
+.form-section:nth-child(5) {
+    margin: 0.75em 0 0 0;
+}
+
 
 .contact-form input {
     padding: 0.75em 1.5em;
@@ -573,6 +586,7 @@ strong {
     border-radius: 10px;
     padding: 0.5em 1em;
     overflow-y: auto;
+    ;
 }
 
 .contact-form textarea:focus {
@@ -583,6 +597,13 @@ strong {
 .contact-form input:focus {
     border: #774936 3.5px solid;
     outline: none;
+}
+
+.contact-form label {
+    color: #774936;
+    font-weight: 500;
+    align-self: flex-start;
+    margin-left: 0.5em;
 }
 
 .contact-form button {
@@ -606,8 +627,11 @@ strong {
 .contacts-notification {
     position: absolute;
     max-width: 85vw;
-    bottom: 5%;
+    bottom: 10%;
     z-index: 999;
+    left: 50%;
+    right: 50%;
+    transform: translate(-50%, -50%);
     text-align: center;
     border-radius: 10px;
     padding: 1em 1.5em;
@@ -620,7 +644,7 @@ strong {
 .contacts-container .loader {
     position: absolute;
     z-index: 999;
-    bottom: 5%;
+    bottom: 10%;
     left: 50%;
     right: 50%;
     transform: translate(-50%, -50%);
